2001-06-18  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: handle 416 reply code.
	* ProcWait.cc, ProcWait.h, lftp.cc: (ProcWait::DeleteAll) new method;
	  use it.
	* FileAccess.cc, modconfig.h, Makefile.am: include Fish.

2001-06-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopyFtp.cc: fix restart in fxp mode.
	* HttpDir.cc, HttpDir.h, NetAccess.cc, NetAccess.h: (GenericParseGlob)
	  new class; use it.
	* Fish.cc, Fish.h: implement Glob, ListInfo.
	* ftpclass.cc: better status for fxp.

2001-06-07  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: NO_USER new GetFileURL option.
	* Http.cc: don't put user name in Referer.

2001-06-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: fix `debug 9 -o log'.
	* ftpclass.cc: handle Serv-U reply to STAT command.
	* Fish.cc: some more work.

2001-06-01  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc, Http.h: implement Cleanup and CleanupThis methods.
	* ftpclass.cc, ftpclass.h: get rid of ftp_chain and ftp_next.

2001-05-30  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc: fix a memory leak in use-fork=no mode.

2001-05-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* lftp.cc, Job.cc, Job.h, SMTask.cc, SMTask.h, SleepJob.cc, SleepJob.h:
	  add notification for moving to background; terminate some never-ending
	  jobs before moving to bg.
	* resource.cc: change default for ftp:fix-pasv-address to true.
	* Http.cc, Http.h: support keep-alive for chunked transfer-encoding.
	* ftpclass.cc, ftpclass.h: fix reget for non-existent files.
	* Resolver.cc: report number of addresses.
	* SMTask.cc: tune Schedule for recursive calling by setting sched_scan
	  to current.

2001-05-29  albert chin (china@thewrittenword.com)

	* Fish.cc, Http.cc, StatusLine.cc, log.cc: use trio functions if needed.

2001-05-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* complete.cc: (vars_generator) special generator for variable